Setter telefonnummer fra KRR som 1. prioritet uansett om samme telefonnummer er registrert i PDL