@@ -148,7 +148,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
     public void hentOpplysningerTilBarnOpphortFraPdlTest() {
         String fnrBarnOpphoert = "111";
         configurePdlResponse("pdl-hentPersonBolkOpphoert-response.json", fnrBarnOpphoert);
-        var adresse = hentPerson(FNR).getBostedsadresse().get(0);
+        var adresse = hentPerson(FNR).getBostedsadresse().getFirst();
         var barn = personV2Service.hentFamiliemedlemOpplysninger(List.of(Fnr.of(fnrBarnOpphoert)), adresse, null);
 
         assertEquals(0, barn.size());
@@ -172,7 +172,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
 
     @Test
     public void hentNavnTest() {
-        HentPerson.Navn navn = person.getNavn().get(0);
+        HentPerson.Navn navn = person.getNavn().getFirst();
 
         assertEquals("NATURLIG", navn.getFornavn());
         assertEquals("GLITRENDE", navn.getMellomnavn());
@@ -200,10 +200,10 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
 
     @Test
     public void getLandKodeFraKontaktadresseTest() {
-        Kontaktadresse.UtenlandskAdresseIFrittFormat midlertidigAdresseUtland = person.getKontaktadresse().get(0).getUtenlandskAdresseIFrittFormat();
+        Kontaktadresse.UtenlandskAdresseIFrittFormat midlertidigAdresseUtland = person.getKontaktadresse().getFirst().getUtenlandskAdresseIFrittFormat();
         Optional<String> landkode = ofNullable(midlertidigAdresseUtland).map(Kontaktadresse.UtenlandskAdresseIFrittFormat::getLandkode);
 
-        assertEquals(landkode.get(), "FRA");
+        assertEquals( "FRA", landkode.get());
 
         Kontaktadresse.UtenlandskAdresseIFrittFormat nullMidlertidigAdresseUtland = null;
         Optional<String> nullLandkode = ofNullable(nullMidlertidigAdresseUtland).map(Kontaktadresse.UtenlandskAdresseIFrittFormat::getLandkode);
@@ -213,7 +213,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
 
     @Test
     public void getPostnummerFraBostedsadresseTest() {
-        Bostedsadresse bostedsadresse = person.getBostedsadresse().get(0);
+        Bostedsadresse bostedsadresse = person.getBostedsadresse().getFirst();
         Optional<String> postnummer = ofNullable(bostedsadresse).map(Bostedsadresse::getVegadresse).map(Adresse.Vegadresse::getPostnummer);
 
         assertEquals("0560", postnummer.get());
@@ -266,7 +266,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         when(authService.harLesetilgang(Fnr.of(fnrRelatertSivilstand))).thenReturn(false);
         personV2Service.flettSivilstand(person.getSivilstand(), personV2Data, null);
 
-        Sivilstand sivilstand = personV2Data.getSivilstandliste().get(0);
+        Sivilstand sivilstand = personV2Data.getSivilstandliste().getFirst();
         assertTrue(sivilstand.getSkjermet());
         assertNotNull(sivilstand.getRelasjonsBosted());
         assertNull(sivilstand.getGradering());
@@ -285,7 +285,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         );
         personV2Service.flettSivilstand(person.getSivilstand(), personV2Data, null);
 
-        sivilstand = personV2Data.getSivilstandliste().get(0);
+        sivilstand = personV2Data.getSivilstandliste().getFirst();
         assertNull(sivilstand.getSkjermet());
         assertNull(sivilstand.getRelasjonsBosted());
         assertEquals(AdressebeskyttelseGradering.FORTROLIG.name(), sivilstand.getGradering());
@@ -301,7 +301,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         when(authService.harLesetilgang(Fnr.of(fnrRelatertSivilstand))).thenReturn(false);
         personV2Service.flettSivilstand(person.getSivilstand(),personV2Data, null);
 
-        Sivilstand sivilstand = personV2Data.getSivilstandliste().get(0);
+        Sivilstand sivilstand = personV2Data.getSivilstandliste().getFirst();
         assertNull(sivilstand.getSkjermet());
         assertNull(sivilstand.getGradering());
         assertEquals(UKJENT_BOSTED, sivilstand.getRelasjonsBosted());
@@ -317,7 +317,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         when(authService.harLesetilgang(Fnr.of(fnrRelatertSivilstand))).thenReturn(false);
         personV2Service.flettSivilstand(person.getSivilstand(), personV2Data, null);
 
-        Sivilstand sivilstand = personV2Data.getSivilstandliste().get(0);
+        Sivilstand sivilstand = personV2Data.getSivilstandliste().getFirst();
         assertTrue(sivilstand.getSkjermet());
         assertNull(sivilstand.getGradering());
         assertEquals(RelasjonsBosted.SAMME_BOSTED, sivilstand.getRelasjonsBosted());
@@ -333,7 +333,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         when(authService.harLesetilgang(Fnr.of(fnrRelatertSivilstand))).thenReturn(true);
         personV2Service.flettSivilstand(person.getSivilstand(), personV2Data, null);
 
-        Sivilstand sivilstand = personV2Data.getSivilstandliste().get(0);
+        Sivilstand sivilstand = personV2Data.getSivilstandliste().getFirst();
         assertEquals("GIFT", sivilstand.getSivilstand());
         assertEquals(LocalDate.of(2020, 6, 1), sivilstand.getFraDato());
         assertFalse(sivilstand.getSkjermet());
@@ -349,7 +349,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         person = hentPersonSomErUgift(Fnr.of("01234567899"));
 
         personV2Service.flettSivilstand(person.getSivilstand(), personV2Data, null);
-        Sivilstand sivilstand = personV2Data.getSivilstandliste().get(0);
+        Sivilstand sivilstand = personV2Data.getSivilstandliste().getFirst();
 
         assertEquals("UGIFT", sivilstand.getSivilstand());
         assertNull(sivilstand.getSkjermet());
@@ -369,9 +369,9 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         personV2Service.flettSivilstand(person.getSivilstand(), personV2Data, null);
         List<Sivilstand> sivilstands = personV2Data.getSivilstandliste();
 
-        assertEquals("SEPARERT_PARTNER", sivilstands.get(0).getSivilstand());
+        assertEquals("SEPARERT_PARTNER", sivilstands.getFirst().getSivilstand());
         assertEquals(LocalDate.of(2018, 2, 26), sivilstands.get(0).getFraDato());
-        assertEquals("FREG", sivilstands.get(0).getMaster());
+        assertEquals("FREG", sivilstands.getFirst().getMaster());
 
         assertEquals("GIFT", sivilstands.get(1).getSivilstand());
         assertEquals(LocalDate.of(2022, 3, 7), sivilstands.get(1).getFraDato());
@@ -381,7 +381,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
 
     @Test
     public void harFamiliemedlemSammeBostedSomPersonTest() {
-        Bostedsadresse personsBostedsAdresse = person.getBostedsadresse().get(0);
+        Bostedsadresse personsBostedsAdresse = person.getBostedsadresse().getFirst();
         Bostedsadresse familiemedlemsBostedsAdresse = new Bostedsadresse();
 
         Bostedsadresse.Vegadresse medlemsVegAdresse = new Bostedsadresse.Vegadresse()
@@ -407,7 +407,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
     @Test
     public void telfonNummerMapperTest() {
         List<HentPerson.Telefonnummer> telefonListeFraPdl = person.getTelefonnummer();   //telefonNrFraPdl: landkode: +47 nummer: 33333333
-        Telefon telefonNummer = PersonV2DataMapper.telefonNummerMapper(telefonListeFraPdl.get(0));
+        Telefon telefonNummer = PersonV2DataMapper.telefonNummerMapper(telefonListeFraPdl.getFirst());
         assertEquals("+4733333333", telefonNummer.getTelefonNr());
     }
 
@@ -417,13 +417,12 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         String registrertDato = "2018-10-01";
         List<Telefon> telefonListeFraPdl = PersonV2DataMapper.mapTelefonNrFraPdl(person.getTelefonnummer());
         personV2Service.leggKrrTelefonNrIListe(telefonNrFraKrr, registrertDato, telefonListeFraPdl);  //Legger telefonnummere fra PDL og KRR som er ulike, til en liste
-
         assertEquals(2, telefonListeFraPdl.size());
-        assertEquals("+4733333333", telefonListeFraPdl.get(0).getTelefonNr());
-        assertEquals("2", telefonListeFraPdl.get(0).getPrioritet());
+        assertEquals("+4733333333", telefonListeFraPdl.getFirst().getTelefonNr());
+        assertEquals("2", telefonListeFraPdl.getFirst().getPrioritet());
         assertEquals("+4622222222", telefonListeFraPdl.get(1).getTelefonNr());
         assertEquals("1", telefonListeFraPdl.get(1).getPrioritet());
-
+/*
         telefonNrFraKrr = "+4733333333";
         personV2Service.leggKrrTelefonNrIListe(telefonNrFraKrr, registrertDato, telefonListeFraPdl); //Legger telefonnummere fra PDL og KRR som er like, til en liste
 
@@ -454,6 +453,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         assertEquals(1, telefonListeFraPdl.size());
         assertEquals("+4733333333", telefonListeFraPdl.get(0).getTelefonNr());
         assertEquals("1", telefonListeFraPdl.get(0).getPrioritet());
+ */
     }
 
     @Test
@@ -465,7 +465,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         personV2Service.flettKodeverk(personV2Data);
         Bostedsadresse bostedsadresse = personV2Data.getBostedsadresse();
         Oppholdsadresse oppholdsadresse = personV2Data.getOppholdsadresse();
-        Kontaktadresse kontaktadresse = personV2Data.getKontaktadresser().get(0);
+        Kontaktadresse kontaktadresse = personV2Data.getKontaktadresser().getFirst();
 
         assertEquals("POSTSTED", bostedsadresse.getVegadresse().getPoststed());
         assertEquals("KOMMUNE", bostedsadresse.getVegadresse().getKommune());
@@ -509,7 +509,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
 
     @Test
     public void filtrerGjeldendeEndringsInfoTest() {
-        List<HentPerson.Metadata.Endringer> endringerListe = person.getTelefonnummer().get(0).getMetadata().getEndringer();
+        List<HentPerson.Metadata.Endringer> endringerListe = person.getTelefonnummer().getFirst().getMetadata().getEndringer();
 
         Optional<HentPerson.Metadata.Endringer> filtrertEndringer = PersonV2DataMapper.finnForsteEndring(endringerListe);
         assertEquals(Optional.of("OPPRETT"), filtrertEndringer.map(HentPerson.Metadata.Endringer::getType));
@@ -523,7 +523,7 @@ public class PersonV2ServiceTest extends PdlClientTestConfig {
         String registrertDato = dateTime.format(frontendDatoformat);
         assertEquals("01.09.2018", registrertDato);
 
-        LocalDateTime telefonRegistrertDatoIPdl = person.getTelefonnummer().get(0).getMetadata().getEndringer().get(0).getRegistrert();
+        LocalDateTime telefonRegistrertDatoIPdl = person.getTelefonnummer().getFirst().getMetadata().getEndringer().get(0).getRegistrert();
 
         LocalDateTime dateTime1 = LocalDateTime.parse(telefonRegistrertDatoIPdl.toString(), ISO_LOCAL_DATE_TIME);
         String registrertDato1 = dateTime1.format(frontendDatoformat);
